# database_development

./: README.md  pyproject.toml
00 Лабораторные работы/: README.md
001 Экзамен/: README.md
00A Выборка двух полей/: 00A_solution.sql  README.md
01A Выборка всех полей/: 01A_solution.sql  README.md
01B Телефонный код города/: 01B_solution.sql  README.md
01C Суммирование полей/: 01C.db  01C_solution.sql  README.md
01D Добавление городов/: 01D.db  01D_solution.sql  README.md
01E Деловые люди (SQL)/: 01E_solution.sql  README.md
02A Создание таблицы с заметками/: 02A.db  02A_solution.sql  README.md
02B Добавление поля в таблицу/: 02B_solution.sql  README.md
02C Удаление тестовой таблицы/: 02C_solution.sql  README.md
02D Классификация целых чисел/: 02D_solution.sql  CFSRu2UWtZgsI4FjN7CvlQdG968915GY_example.db  README.md  Untitled-1.sqlite3-query
02E Выборка уникальных значений/: 02E_solution.sql  README.md
02F Поиск клиентов по первой букве/: 02F_solution.sql  README.md
02G Опытные сотрудники/: 02G_solution.sql  README.md
02H Удаление NULL-значений/: 02H_solution.sql  README.md
02I Обновление значений поля/: 02I_solution.sql  README.md
03A Создание простой базы контактов/: 03A.db  03A_solution.sql  README.md
03B Занятые парковочные места/: 03B_solution.sql  README.md  example.db
03P Четыре злостных пирата/: 03P_solution.sql  README.md  example.db
03Q Ретроконсоли/: 03Q_solution.sql  Consoles.db  README.md
