[project]
name = "database-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlacodegen>=3.0.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-codegen>=1.1.2",
    "uvicorn[standard]>=0.34.2",
]
